--- a/style3.css
+++ b/style3.css
@@ -5,6 +5,7 @@ margin: 50px auto;
 border:2px solid black;
 background-color: white;
 border-radius   :20px; 
+cursor: pointer;
 }
 
 #toggler-circle{
